6717150: improper constant folding of subnormal strictfp multiplications and divides

Suppress constant folding of double divides and multiplications on ia32

Reviewed-by: never